force-app/main/default/objects/CommercialCode__c/CommercialCode__c.object-meta.xml
<CustomObject>
    <label>Codice Commerciale</label>
    <nameField>
        <label>Codice Commerciale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codici Commerciali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>