force-app/main/default/objects/CommercialCode__c/fields/ActualUsesEE__c.field-meta.xml
<CustomField>
    <fullName>ActualUsesEE__c</fullName>
    <label>Utilizzi Effettivi EE</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>