force-app/main/default/objects/CommercialCode__c/fields/ActualUsesGAS__c.field-meta.xml
<CustomField>
    <fullName>ActualUsesGAS__c</fullName>
    <label>Utilizzi Effettivi GAS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>