force-app/main/default/objects/CommercialCode__c/fields/ActualUsesVAS__c.field-meta.xml
<CustomField>
    <fullName>ActualUsesVAS__c</fullName>
    <label>Utilizzi Effettivi VAS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>