force-app/main/default/objects/CommercialCode__c/fields/FullCode__c.field-meta.xml
<CustomField>
    <fullName>FullCode__c</fullName>
    <label>Codice</label>
    <length>80</length>
    <type>Text</type>
</CustomField>