force-app/main/default/objects/CommercialCode__c/fields/MaximalUsesEE__c.field-meta.xml
<CustomField>
    <fullName>MaximalUsesEE__c</fullName>
    <description>Numerico, gestito dal CRM alla generazione del codice</description>
    <label>Massimale Utilizzi EE</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>