force-app/main/default/objects/CommercialCode__c/fields/RecoveryUsesEE__c.field-meta.xml
<CustomField>
    <fullName>RecoveryUsesEE__c</fullName>
    <label>Recuperi Utilizzi EE</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>