force-app/main/default/objects/CommercialCode__c/fields/RecoveryUsesGAS__c.field-meta.xml
<CustomField>
    <fullName>RecoveryUsesGAS__c</fullName>
    <label>Recuperi Utilizzi GAS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>