force-app/main/default/objects/CommercialCode__c/fields/RecoveryUsesVAS__c.field-meta.xml
<CustomField>
    <fullName>RecoveryUsesVAS__c</fullName>
    <label>Recuperi Utilizzi VAS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>